--- a/index.html
+++ b/index.html
@@ -12,38 +12,34 @@
             background-image: url(images/bmw-css-7-series-protection-overview-page-teaser.jpg);
             width: fit-content;
         }
+
+        body{
+            background-image: url(images/wah.jpeg);
+        }
     </style>
 </head>
 
-<body class="bg-primary">
+<body class="bg-dark">
     <div class="container-fluid">
         <!-- navbar goes here  -->
-        <!-- section one  -->
-        <!-- it contains the navigation bar  -->
-        <section class="row">
-            <div class="col-md-12">
-                <!-- a nav with navbar content  -->
-                <nav class="navbar navbar-expand-md bg-light">
-                    <a href="" class="navbar-brand text-danger"> <img src="images/Logo M Logo 1185 jpeg.jpg"
-                            alt="Bootstrap" width="30" height="24"> BMW MOTORS</a>
+        <!-- a nav with navbar content  -->
+                <nav class="navbar navbar-expand-md bg-dark">
+                    <a href="" class="navbar-brand text-danger" ><img src="images/477680.webp" alt="BMW" width="30" height="30"><b>BMW MOTORS</b></a>
                     <button class="navbar-toggler" data-bs-target="#navbarcollapse" data-bs-toggle="collapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- a division containing the links  -->
                     <div class="collapse navbar-collapse" id="navbarcollapse">
                         <div class="navbar-nav">
-                            <a href="INDEX.html" class="nav-link">Home</a>
-                            <a href="Beddings.html" class="nav-link"></a>
-                            <a href="" class="nav-link">Cars</a>
-                            <a href="" class="nav-link">Help</a>
+                            <a href="INDEX.html" class="nav-link text-primary">Home</a>
+                            <a href="cars.html" class="nav-link text-primary">Cars</a>
+                            <a href="About us.html" class="nav-link text-primary">About us</a>
+                            <a href="help.html" class="nav-link text-primary">Help</a>
                         </div>
                     </div>
                 </nav>
             </div>
         </section>
-        <!-- end of section 1  -->
-
-
         <!-- carousel goes here  -->
         <section class="row">
             <div class="col-md-12">
@@ -66,7 +62,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/bmw-Motoren-P60-m3-gtr-street-ai-16.jpg" class="d-block w-100" alt="...">
+                            <img src="images/BMW_iX3_1756635017239_1756635029437.avif" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-danger"><b><u>The wheel of Time</u></b></h5>
                                 <p class="text-white"><b>This is not just a wheel but it is takes you wherever you wanna
@@ -103,7 +99,7 @@
             </video>
         </div>
 
-        <h1 class="text-center text-dark"><b><u>ALL BMW BRANDS</u></b></h1><br>
+        <h1 class="text-center text-danger"><b><u>ALL BMW BRANDS</u></b></h1><br>
         <!-- section 1  -->
         <section class="row">
             <!-- child one  -->
@@ -181,9 +177,9 @@
         <hr>
         <!-- end of section 1  -->
         <!-- Section 2  -->
-        <h1 class="text-danger text-center"><b><u>Why we are the</u>
-                <h1 class="text-dark text-center"><u>best in car dealing</u></h1>
-            </b></h1><br>
+        <h1 class="text-danger text-center"><b><u>Why we are the best in the dealership</u></b></h1><br>
+                
+            
         <section class="row">
             <!-- child one  -->
             <div class="col-md-6">
@@ -245,8 +241,9 @@
                         <img src="images/OIP (3).webp" alt="4 series" width="100%">
                     </div>
                     <!-- card footer  -->
-                    <div class="card-footer">
-
+                    <div class="card-footer text-danger bg-dark text-center">
+                        <p><b>Most rated car in the BMW company. It is fast and has twin turbos. Has a hybrid engine power. The car takes in petrol.</b></p>
+                        <span class="badge bg-danger"><b>convertible</b></span>
                     </div>
                 </div>
             </div>
@@ -262,8 +259,10 @@
                         <img src="images/OIP (4).webp" alt="x3" width="100%">
                     </div>
                     <!-- card footer  -->
-                    <div class="card-footer">
-
+                    <div class="card-footer text-danger bg-dark text-center">
+                        <p><b>This is the X3 the best BMW family car.</b>
+                        </p>
+                        <span class="badge bg-danger">schoolbus</span>
                     </div>
                 </div>
             </div>
@@ -279,13 +278,18 @@
                         <img src="images/163d568b-28d3-403e-93ea-09737abbef9f_bmw-x1-xdrive25e-elektrische-klep-pdc-v-a-led-apple-carplay-dab-15x-op-voorraad.jpg"
                             alt="X1" width="100%">
                     </div>
+                    <!-- card footer  -->
+                     <div class="card-footer text-center text-danger bg-dark">
+                        <p><b>The best durable X1 vehicle. It has spacing and can carry upto 10 people maximum. This is the fastest SUV .</b></p>
+                        <span class="badge bg-danger">Machine</span>
+                     </div>
                 </div>
             </div>
         </section>
         <!-- end of sectoin three  -->
         <hr>
         <!-- section four  -->
-        <h1 class="text-center text-dark"><b><u>BMW HISTORY</u></b></h1>
+        <h1 class="text-center text-danger"><b><u>BMW HISTORY</u></b></h1>
         <section class="row">
             <!-- child one  -->
             <div class="col-md-4">
@@ -296,7 +300,7 @@
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
-                        <img src="images/800px-13.jpg" alt="The first" width="100%">
+                        <img src="images/800px-13.jpg" alt="The first" width="100%" height="190">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer text-center bg-dark">
@@ -314,7 +318,7 @@
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
-                        <img src="images/BMW-M1_620_413.jpg" alt="X1" width="100%">
+                        <img src="images/BMW-M1_620_413.jpg" alt="X1" width="100%" height="190">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer bg-dark">
@@ -331,7 +335,7 @@
                     </div>
                     <!-- card body -->
                     <div class="card-body">
-                        <img src="images/2026-bmw-xm-label-exterior-2.jpg" alt="X6" width="100%">
+                        <img src="images/2026-bmw-xm-label-exterior-2.jpg" alt="X6" width="100%" height="190">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer bg-dark text-center">
@@ -354,7 +358,7 @@
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
-                        <img src="images/Karl-Friedrich-Rapp-1130.webp" alt="Karl" width="100%">
+                        <img src="images/Karl-Friedrich-Rapp-1130.webp" alt="Karl" width="100%" height="170">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer bg-dark text-danger">
@@ -371,7 +375,7 @@
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
-                        <img src="images/images.webp" alt="" width="100%">
+                        <img src="images/images.webp" alt="" width="100%" height="190">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer bg-dark text-danger">
